added responsive design, added redux toolkit starting code

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#App {
+ // margin-left: 280px;
+ height: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
