--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  text-align: center;
 }
 
 .logo {
@@ -38,4 +37,7 @@
 
 .read-the-docs {
   color: #888;
+}
+.grid-container {
+  display: grid
 }
