feat: update fonts & add react-icons package

--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -1,16 +1,16 @@
 @font-face {
-  font-family: "Poppins";
-  src: url("../fonts/Poppins-Regular.ttf");
+  font-family: "SF Mono";
+  src: url("../fonts/SFMono-Regular.otf");
 }
 
 @font-face {
-  font-family: "Poppins";
+  font-family: "SF Mono";
   font-weight: 500;
-  src: url("../fonts/Poppins-Medium.ttf");
+  src: url("../fonts/SFMono-Medium.otf");
 }
 
 @font-face {
-  font-family: "Poppins";
+  font-family: "SF Mono";
   font-weight: 600;
-  src: url("../fonts/Poppins-SemiBold.ttf");
+  src: url("../fonts/SFMono-Semibold.otf");
 }
