fix: update spinner

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "./components/modal.scss";
 @import "./fonts.scss";
+@import "./components/modal.scss";
+@import "./components/spinner.scss";
 
 body {
 }
