feat: update css style file

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -5,6 +5,8 @@
 @import "./fonts.scss";
 @import "./components/modal.scss";
 @import "./components/spinner.scss";
+@import "./components/scrollbar.scss";
+@import "./components/table.scss";
 
 body {
 }
