fix: update storage components

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -7,6 +7,7 @@
 @import "./components/spinner.scss";
 @import "./components/scrollbar.scss";
 @import "./components/table.scss";
+@import "./components/grid.scss";
 
 body {
 }
