feat: magic sign on frontend

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -8,6 +8,7 @@
 @import "./components/scrollbar.scss";
 @import "./components/table.scss";
 @import "./components/grid.scss";
+@import "./components/input.scss";
 
 body {
 }
