--- a/src/pages/Home/styles/globals.css
+++ b/src/pages/Home/styles/globals.css
@@ -6,10 +6,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Eudoxus Sans", sans-serif;
   scroll-behavior: smooth;
 }
-
+.custom-font{
+  font-family: "Eudoxus Sans", sans-serif;
+}
 .gradient-01 {
   background-image: linear-gradient(
     270deg,
