style change scroll

--- a/src/assets/styles/components/table.scss
+++ b/src/assets/styles/components/table.scss
@@ -30,4 +30,11 @@
   overflow-x: scroll;
   width: 100%;
   height: 10px;
+  &::-webkit-scrollbar-track {
+    background: white;
+  }
+}
+
+.scrollbar-color::-webkit-scrollbar-track {
+  background: white;
 }
