share box & fixes

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import "./fonts.scss";
+@import "./components/animations.scss";
 @import "./components/modal.scss";
 @import "./components/spinner.scss";
 @import "./components/scrollbar.scss";
