fix design box share

--- a/src/assets/styles/components/animations.scss
+++ b/src/assets/styles/components/animations.scss
@@ -38,17 +38,17 @@ $background-color_1: #166534;
 		}
 	}
 }
-.transition {
-	background-color: $background-color_1;
-	border-radius: 50%;
-	width: 0;
-	height: 0;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	-webkit-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	-o-transform: translate(-50%, -50%);
-}
+// .transition {
+// 	background-color: $background-color_1;
+// 	border-radius: 50%;
+// 	width: 0;
+// 	height: 0;
+// 	position: absolute;
+// 	left: 50%;
+// 	top: 50%;
+// 	transform: translate(-50%, -50%);
+// 	-webkit-transform: translate(-50%, -50%);
+// 	-moz-transform: translate(-50%, -50%);
+// 	-ms-transform: translate(-50%, -50%);
+// 	-o-transform: translate(-50%, -50%);
+// }
