--- a/src/assets/styles/components/grid.scss
+++ b/src/assets/styles/components/grid.scss
@@ -1,3 +1,10 @@
 .grid-200 {
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
+
+.forlder-path{
+  text-wrap: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  
+}
