feat: share folders stg 1

--- a/src/assets/styles/components/table.scss
+++ b/src/assets/styles/components/table.scss
@@ -3,10 +3,12 @@
   border-right: 1px solid #eeeeee;
   margin: 10px;
 }*/
+.table-div {
+	overflow-y: auto;
+}
 
 @media only screen and (min-width: 1024px) {
 	.table-div {
-		overflow-y: scroll;
 		min-height: calc(100vh - 565px);
 		max-height: calc(100vh - 565px);
 	}
@@ -14,7 +16,6 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 	.table-div {
-		overflow-y: scroll;
 		min-height: calc(100vh - 615px);
 		max-height: calc(100vh - 615px);
 	}
@@ -22,7 +23,6 @@
 
 @media only screen and (min-width: 640px) and (max-width: 768px) {
 	.table-div {
-		overflow-y: scroll;
 		min-height: calc(100vh - 685px);
 		max-height: calc(100vh - 685px);
 	}
@@ -30,7 +30,6 @@
 
 @media only screen and (max-width: 640px) {
 	.table-div {
-		overflow-y: scroll;
 		min-height: calc(100vh - 615px);
 		max-height: calc(100vh - 615px);
 	}
