--- a/src/assets/styles/components/modal.scss
+++ b/src/assets/styles/components/modal.scss
@@ -1,41 +1,78 @@
 .modal-overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 
-  background: #32323280;
-  z-index: 90;
+	background: #32323280;
+	z-index: 90;
 }
 
 .modal-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
-  outline: 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: auto;
+	outline: 0;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-  .modal {
-    position: relative;
-    max-width: 500px;
-    z-index: 100;
-  }
+	.modal {
+		position: relative;
+		max-width: 500px;
+		z-index: 100;
+	}
 }
 
 .modal-content {
-  z-index: 110;
+	z-index: 110;
 }
 
+#slideshowAnim {
+	overflow: hidden;
+}
 
-#slideshowAnim{
-  overflow: hidden;
+.thumbnail {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 70px;
+	height: 70px;
+	border: 0px solid transparent;
+	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	border-radius: 15px;
+	-webkit-border-radius: 15px;
+	-moz-border-radius: 15px;
+	-ms-border-radius: 15px;
+	-o-border-radius: 15px;
+	&:hover {
+		cursor: pointer;
+	}
+	&.selected {
+		border: 2px solid #ffff;
+		&:hover {
+			border: 2px solid gray;
+		}
+		& img{
+			height: 68px;
+		}
+	}
+	& img{
+		transition: all 0.3s ease;
+		-webkit-transition: all 0.3s ease;
+		-moz-transition: all 0.3s ease;
+		-ms-transition: all 0.3s ease;
+		-o-transition: all 0.3s ease;
+}
 }
