fix:responsive & small changes

--- a/src/assets/styles/components/one-page.scss
+++ b/src/assets/styles/components/one-page.scss
@@ -1,32 +1,21 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.one-page-btn * {
   font-family: "Inter", sans-serif;
   scroll-behavior: smooth;
 }
 
 .gradient-01 {
-  background-image: linear-gradient(
-    270deg,
-    #ff6cf560 0%,
-    #b163ff60 50%,
-    #5cff6d60 100%
-  );
+  background-image: linear-gradient(270deg,
+      #ff6cf560 0%,
+      #b163ff60 50%,
+      #5cff6d60 100%);
   filter: blur(125px);
 }
 
 .hero-gradient {
-  background: linear-gradient(
-    97.86deg,
-    #a509ff 0%,
-    #34acc7 53.65%,
-    #a134c7 100%
-  );
+  background: linear-gradient(97.86deg,
+      #a509ff 0%,
+      #34acc7 53.65%,
+      #a134c7 100%);
 }
 
 .gradient-02 {
@@ -39,6 +28,7 @@
   background: #7aebfb90;
   filter: blur(190px);
 }
+
 .glassmorphism {
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -72,11 +62,9 @@
 }
 
 .gradient-05 {
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0.04) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(255, 255, 255, 0.04) 0%,
+      rgba(255, 255, 255, 0) 100%);
 }
 
 .feedback-gradient {
@@ -91,11 +79,8 @@
 }
 
 .footer-gradient {
-  position: absolute;
   width: 500px;
   height: 100px;
-  left: 37%;
-  bottom: 0;
 
   background: #65c4fa;
   filter: blur(150px);
@@ -109,19 +94,17 @@
 .rainbow-border {
   border: 3px solid gray;
   animation: rainbow-border 2s linear infinite;
-  background-image: linear-gradient(
-    #ff7a7a,
-    #ffd26f 10%,
-    #f1fd6e 20%,
-    #70fe68 30%,
-    #4ffaef 40%,
-    #63ebfb 50%,
-    rgb(107, 162, 249) 60%,
-    rgb(134, 102, 250) 70%,
-    #e076fd 80%,
-    #f673e9 90%,
-    #ff6f6f
-  );
+  background-image: linear-gradient(#ff7a7a,
+      #ffd26f 10%,
+      #f1fd6e 20%,
+      #70fe68 30%,
+      #4ffaef 40%,
+      #63ebfb 50%,
+      rgb(107, 162, 249) 60%,
+      rgb(134, 102, 250) 70%,
+      #e076fd 80%,
+      #f673e9 90%,
+      #ff6f6f);
   background-size: 200% 200%;
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: xor;
@@ -133,23 +116,17 @@
   0% {
     background-position: 0 0;
   }
+
   100% {
     background-position: 0 -200%;
   }
 }
-.group:hover .rainbow-border {
+
+//:hover
+.group .rainbow-border {
   border: 4px solid transparent;
   border-radius: 48px;
-  transform: perspective(5000px) rotateX(20deg) rotateY(-16deg) rotateZ(6deg)
-    translateY(-40px) translateX(-40px);
+  transform: perspective(5000px) rotateX(20deg) rotateY(-16deg) rotateZ(7deg) translateY(-20px) translateX(-20px) !important;
   transform-origin: center;
   transition: transform 0.1s ease;
-}
-
-canvas[data-particle-animation] {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
