--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -11,6 +11,7 @@
 @import "./components/grid.scss";
 @import "./components/theme-switch.scss";
 @import "./components/input.scss";
+@import "./components/one-page.scss";
 
 
 body {
