--- a/src/assets/styles/components/modal.scss
+++ b/src/assets/styles/components/modal.scss
@@ -39,40 +39,86 @@
 	overflow: hidden;
 }
 
+.thumbnails {
+	min-width: 100%;
+	transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	-webkit-transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	-moz-transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	-ms-transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	-o-transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	height: 15%;
+	opacity: 1;
+	&.hidden-thumbnails {
+		height: 0%;
+		opacity: 0;
+		& div {
+			overflow: hidden;
+		}
+	}
+}
+
+.image-preview-content {
+	height: 78%;
+	transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	-webkit-transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	-moz-transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	-ms-transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	-o-transition: all 0.3s cubic-bezier(1, 0.43, 0.28, 0.56);
+	&.hidden-thumbnails {
+		height: 93%;
+	}
+
+	& * {
+		max-width: 100% !important;
+	}
+}
+
 .thumbnail {
 	display: flex;
+	overflow: hidden;
 	justify-content: center;
 	align-items: center;
-	width: 70px;
-	height: 70px;
-	border: 0px solid transparent;
-	transition: all 0.3s ease;
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-ms-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
+	min-width: 78px;
+	width: 78px;
+	height: 78px;
 	border-radius: 15px;
 	-webkit-border-radius: 15px;
 	-moz-border-radius: 15px;
 	-ms-border-radius: 15px;
 	-o-border-radius: 15px;
+	border: 4px solid transparent;
+	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
 	&:hover {
 		cursor: pointer;
 	}
 	&.selected {
-		border: 2px solid #ffff;
+		border-width: 4px;
+		border-color: white;
 		&:hover {
-			border: 2px solid gray;
+			border-color: gray;
 		}
-		& img{
-			height: 68px;
+		& img {
+			height: 60px;
+			width: 60px;
 		}
 	}
-	& img{
-		transition: all 0.3s ease;
-		-webkit-transition: all 0.3s ease;
-		-moz-transition: all 0.3s ease;
-		-ms-transition: all 0.3s ease;
-		-o-transition: all 0.3s ease;
-}
+	& img {
+		min-height: 60px;
+		min-width: 60px;
+		height: 70px;
+		border-radius: 15px;
+		-webkit-border-radius: 15px;
+		-moz-border-radius: 15px;
+		-ms-border-radius: 15px;
+		-o-border-radius: 15px;
+		transition: all 0.2s ease;
+		-webkit-transition: all 0.2s ease;
+		-moz-transition: all 0.2s ease;
+		-ms-transition: all 0.2s ease;
+		-o-transition: all 0.2s ease;
+	}
 }
