--- a/src/assets/styles/components/modal.scss
+++ b/src/assets/styles/components/modal.scss
@@ -8,6 +8,9 @@
 	background: #32323280;
 	z-index: 90;
 }
+.action-btns-file-viewer {
+	z-index: 101 !important;
+}
 
 .modal-wrapper {
 	position: fixed;
