change design privacy-policy

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -12,6 +12,7 @@
 @import "./components/theme-switch.scss";
 @import "./components/input.scss";
 @import "./components/one-page.scss";
+@import "./components/privacy-policy.scss";
 
 
 body {
