--- a/src/assets/styles/components/modal.scss
+++ b/src/assets/styles/components/modal.scss
@@ -137,8 +137,15 @@
 		height: 93%;
 	}
 
-	& * {
+	& *:not(img) {
 		max-width: 100% !important;
+	}
+	
+	& img {
+		max-width: none !important;
+		width: auto;
+		min-width: none;
+		height: 100%;
 	}
 }
 
