add page snapshots

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -13,6 +13,8 @@
 @import "./components/input.scss";
 @import "./components/one-page.scss";
 @import "./components/privacy-policy.scss";
+@import "./components/snapshots.scss";
+
 
 
 body {
