--- a/src/assets/styles/components/table.scss
+++ b/src/assets/styles/components/table.scss
@@ -10,31 +10,46 @@
 
 @media only screen and (min-width: 1024px) {
 	.table-div {
-		min-height: calc(100vh - 540px);
-		max-height: calc(100vh - 540px);
+		min-height: calc(100vh - 580px);
+		max-height: calc(100vh - 580px);
 	}
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 	.table-div {
-		min-height: calc(100vh - 590px);
-		max-height: calc(100vh - 590px);
+		min-height: calc(100vh - 620px);
+		max-height: calc(100vh - 620px);
 	}
 }
 
 @media only screen and (min-width: 640px) and (max-width: 768px) {
 	.table-div {
-		min-height: calc(100vh - 640px);
-		max-height: calc(100vh - 640px);
+		min-height: calc(100vh - 650px);
+		max-height: calc(100vh - 650px);
 	}
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen  and (min-width: 417px) and (max-width: 640px) {
 	.table-div {
 
 		min-height: calc(100vh - 535px);
 		max-height: calc(100vh - 535px);
-		
+		&.open-menu{
+			min-height: calc(100vh - 585px) !important;
+			max-height: calc(100vh - 585px) !important;
+		}
+	}
+}
+
+@media only screen and (max-width: 417px) {
+	.table-div {
+
+		min-height: calc(100vh - 535px);
+		max-height: calc(100vh - 535px);
+		&.open-menu{
+			min-height: calc(100vh - 630px) !important;
+			max-height: calc(100vh - 630px) !important;
+		}
 	}
 }
 
@@ -52,7 +67,7 @@
 	overflow-x: auto;
 }
 
-.invisible-scrollbar {
+#invisible-scrollbar {
 	overflow-x: auto;
 	overflow-y: auto;
 
